# rover

./: Cargo.toml  README.md  TODO.md
.github/workflows/: rust.yml
src/: action.rs  events.rs  lifecycle.rs  main.rs  pointer.rs  reducer.rs  search.rs  state.rs  ui.rs  util.rs  value.rs
src/search/: cache.rs  mod.rs  parser.rs
src/search/algs/: fuzzy.rs  mod.rs
src/state/: index.rs  mod.rs
